[package]
name = "bszet-davinci"
version = "0.0.0-git"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
time = { version = "0.3", default-features = false, features = ["parsing", "std"] }
tokio = { version = "1.37", default-features = false, features = ["sync"] }
uuid = { version = "1.8", default-features = false, features = ["v4"] }
once_cell = "1.19"
sailfish = "0.8"
tracing = "0.1"
select = "0.6"
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.37", default-features = false, features = ["macros", "test-util"] }
