[package]
name = "bszet-image"
version = "0.0.0-git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
anyhow = "1.0.68"

[dev-dependencies]
tokio = { version = "1.24", default-features = false, features = ["macros", "test-util"] }
