[package]
name = "bszet-mind"
description = "A tool to monitor STÜBER SYSTEMS' DAVINCI's HTML exported substitution plan for changes."
version = "0.0.0-git"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["sensitive-headers", "trace", "validate-request", "auth"], default-features = false }
tokio = { version = "1.37", default-features = false, features = ["macros", "rt-multi-thread", "signal", "fs"] }
axum = { version = "0.7", features = ["tokio", "query", "json", "http1"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.12", default-features = false }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
bszet-davinci = { path = "../bszet-davinci" }
bszet-notify = { path = "../bszet-notify" }
bszet-image = { path = "../bszet-image" }
http-body-util = "0.1"
include_dir = "0.7"
tracing = "0.1"
anyhow = "1.0"
